add_executable(1_two_sum 1_two_sum.cpp)
add_executable(2_add_two_numbers 2_add_two_numbers.cpp)
add_executable(3_longest 3_longest.cpp)
add_executable(3_longest_timeout 3_longest_timeout.cpp)
add_executable(4_median 4_median.cpp)
add_executable(5_longest_palindromic_substring_timeout 5_longest_palindromic_substring_timeout.cpp)
add_executable(5_longest_palindromic_substring 5_longest_palindromic_substring.cpp)
add_executable(6_zigzag_conversion 6_zigzag_conversion.cpp)
add_executable(7_reverse_integer 7_reverse_integer.cpp)
add_executable(8_string_to_integer 8_string_to_integer.cpp)
add_executable(9_palindrome_number 9_palindrome_number.cpp)
add_executable(10_regular_expression_matching 10_regular_expression_matching.cpp)
add_executable(11_container_with_most_water 11_container_with_most_water.cpp)
add_executable(12_integer_to_roman 12_integer_to_roman.cpp)