add_executable(1_two_sum 1_two_sum.cpp)
add_executable(2_add_two_numbers 2_add_two_numbers.cpp)
add_executable(3_longest 3_longest.cpp)
add_executable(3_longest_timeout 3_longest_timeout.cpp)
add_executable(4_median 4_median.cpp)
add_executable(5_longest_palindromic_substring_timeout 5_longest_palindromic_substring_timeout.cpp)
add_executable(5_longest_palindromic_substring 5_longest_palindromic_substring.cpp)
add_executable(6_zigzag_conversion 6_zigzag_conversion.cpp)
add_executable(7_reverse_integer 7_reverse_integer.cpp)
add_executable(8_string_to_integer 8_string_to_integer.cpp)
add_executable(9_palindrome_number 9_palindrome_number.cpp)
add_executable(10_regular_expression_matching 10_regular_expression_matching.cpp)
add_executable(11_container_with_most_water 11_container_with_most_water.cpp)
add_executable(12_integer_to_roman 12_integer_to_roman.cpp)
add_executable(13_roman_to_integer 13_roman_to_integer.cpp)
add_executable(14_longest_common_prefix 14_longest_common_prefix.cpp)
add_executable(15_3sum 15_3sum.cpp)
add_executable(15_3sum_timeout 15_3sum_timeout.cpp)
add_executable(16_3sum_cloest 16_3sum_cloest.cpp)
add_executable(17_letter_combinations_of_a_phone_number 17_letter_combinations_of_a_phone_number.cpp)
add_executable(18_4sum 18_4sum.cpp)
add_executable(19_remove_nth_node_from_end_of_list 19_remove_nth_node_from_end_of_list.cpp)
add_executable(20_valid_parentheses 20_valid_parentheses.cpp)
add_executable(21_merge_two_sorted_lists 21_merge_two_sorted_lists.cpp)
add_executable(22_generate_parentheses 22_generate_parentheses.cpp)
add_executable(23_merge_k_sorted_lists 23_merge_k_sorted_lists.cpp)
add_executable(24_swap_nodes_in_pairs 24_swap_nodes_in_pairs.cpp)
add_executable(25_reverse_nodes_in_k_group 25_reverse_nodes_in_k_group.cpp)
add_executable(26_remove_duplicates_from_sorted_array 26_remove_duplicates_from_sorted_array.cpp)
add_executable(27_remove_element 27_remove_element.cpp)
add_executable(28_implement_strStr 28_implement_strStr.cpp)
add_executable(29_divide_two_integers 29_divide_two_integers.cpp)
add_executable(30_substring_with_concatenation_of_all_words 30_substring_with_concatenation_of_all_words.cpp)
add_executable(30_substring_with_concatenation_of_all_words_memory_limit_exceeded 30_substring_with_concatenation_of_all_words_memory_limit_exceeded.cpp)